# ecaz

./: .gitignore  AGENTS.md  BENCHMARKS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  clippy.toml  deny.toml  ecaz--0.1.0--0.1.1.sql  ecaz--0.1.1--0.1.2.sql  ecaz.control  handoff.md  tqvector--0.1.0--0.1.1.sql  tqvector.control
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: helpers.rs
benches/criterion/: bitpack.rs  codebook.rs  hadamard.rs  page_codec.rs  quant_encode.rs  quant_prepare.rs  quant_score.rs  text_io.rs
benches/dhat/: encode.rs  score.rs
benches/iai/: bitpack.rs  hadamard.rs  quant_score.rs
crates/ecaz-cli/: Cargo.toml  README.md
crates/ecaz-cli/src/: cli.rs  main.rs  manifest.rs  output.rs  profiles.rs  psql.rs  reloptions.rs  tsv.rs
crates/ecaz-cli/src/commands/: mod.rs
crates/ecaz-cli/src/commands/bench/: build_probe.rs  cross_am.rs  graph.rs  latency.rs  mod.rs  overhead.rs  recall.rs  spire_pipeline.rs  storage.rs  suite.rs
crates/ecaz-cli/src/commands/compare/: mod.rs  pgvector.rs  vectorscale.rs
crates/ecaz-cli/src/commands/corpus/: fetch.rs  generate.rs  inspect.rs  list.rs  load.rs  mod.rs  prepare.rs
crates/ecaz-cli/src/commands/dev/: fault.rs  install.rs  mod.rs  pg_upgrade.rs  scratch.rs  spire_multicluster.rs  sql.rs  support.rs  test.rs
crates/ecaz-cli/src/commands/quant/: feasibility.rs  mod.rs
crates/ecaz-cli/src/commands/stress/: ivf_insert.rs  ivf_vacuum_scale.rs  mod.rs  vacuum.rs
crates/ecaz-cli/suites/: profile-cross-engine-real10k.json  profile-diskann-prefilter-real10k.json  profile-hnsw-100k.json  profile-ivf-100k.json  profile-ivf-1m.json  profile-ivf-25k.json  profile-ivf-50k.json  task30-spire-real10k.json  task31-m5-ivf-100k.json
crates/ecaz-cli/suites/sql/: diskann-cost-split-real10k.sql
crates/ecaz-cloud/: Cargo.toml
crates/ecaz-cloud/src/: aws.rs  datasets.rs  lib.rs  profiles.rs  ssm.rs  state.rs  terraform.rs
crates/ecaz-cloud/src/commands/: bench.rs  corpus.rs  down.rs  install.rs  mod.rs  pause.rs  resume.rs  snapshot.rs  status.rs  up.rs
csrc/: pg18_pgstat_shim.c  standalone_pg_backend_stubs.c
docs/: PG18_UPGRADE_PLAN.md  RECALL_ANN_BENCHMARKS_ANCHOR.md  RECALL_REAL_CORPUS.md  SPIRE_CODE_LAYOUT.md  SPIRE_DIAGNOSTICS.md  SPIRE_LIBPQ_RUNBOOK.md  SPIRE_LOCAL_CAPACITY_TARGETS.md  SPIRE_LOCAL_READINESS.md  architecture.md  benchmark-index.md  benchmark-reporting-standard.md  benchmarks.md  build-from-source.md  contributing.md  ffi-inventory.md  getting-started.md  hardening-governance.md  hardening.md  on-disk-format.md  pg18.md  recall-floors.md  recall-methodology.md  references.md  test-quality-strategy.md  usage.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: diskann_metadata_decode.rs  element_tuple_decode.rs  item_pointer_decode.rs  neighbor_tuple_decode.rs  parse_text.rs  unpack_mse.rs  vector_normalize.rs
fuzz/src/: lib.rs
plan/: handoff-task17-isolated.md  plan.md  status.md
review/: 01-aminsert-groundwork.md  02-tail-page-reuse-and-rollover.md  03-duplicate-coalescing-and-capacity.md  04-build-source-live-insert-rejection.md  05-vacuum-noop-callbacks.md  06-scan-descriptor-scaffolding.md  07-rescan-query-validation.md  08-amgettuple-state-gating.md  09-rescan-defensive-cases.md  10-vacuum-noop-coverage.md  102-queued-beam-candidate-lookup.md  104-active-candidate-beam-state.md  107-remove-redundant-scan-beam-adapters.md  108-remove-test-only-frontier-alias.md  109-beam-native-frontier-debug-boundaries.md  11-scan-lifecycle-idempotency.md  111-remove-dead-scan-candidate-boundary.md  112-remove-dead-queued-beam-lookup.md  114-remove-dead-bootstrap-expand-helper.md  115-gate-debug-only-frontier-helpers.md  12-tail-page-rollover-followup.md  123-skip-stale-bootstrap-candidates.md  127-admin-snapshot-for-planner-and-insert-stats.md  127-explicit-bootstrap-to-linear-transition.md  13-amgettuple-empty-index-noop.md  130-linear-helper-without-pending-drain.md  131-explicit-linear-result-materialization.md  136-unified-scan-result-state-clearing.md  137-scan-result-state-container.md  137-strategy-translation-scaffolding-in-explain-snapshot.md  139-bootstrap-selection-before-materialization.md  139-statistics-scaffolding-snapshot.md  14-rescan-query-payload-state.md  140-phase-aware-staged-result-selection.md  141-result-state-owned-bookkeeping.md  142-direct-staged-selection-in-tuple-production.md  142-planner-integration-blockers-snapshot.md  147-exhaustion-owns-result-state-clearing.md  15-amgettuple-linear-forward-scan.md  16-query-inner-product-gamma-payload.md  (+30 more)
reviews/: MIGRATION.md  README.md  REVIEWER.md
scripts/: bench_pg_comparators.sh  bench_pgvector_sql_latency.sh  bench_pgvector_sql_latency_scratch.sh  bench_recall.py  bench_spire_local_placement_pg18.sh  bench_sql_latency.sh  bench_sql_latency_scratch.sh  bench_sql_latency_verified.sh  bench_sql_latency_verified_scratch.sh  bench_storage.sh  bench_tqvector_sql_overhead_breakdown.sh  bench_tqvector_sql_overhead_breakdown_scratch.sh  check_cost_baseline.py  check_coverage_baseline_complete.sh  check_coverage_delta.sh  check_task39_quality_ci.py  check_unsafe_comments.sh  dylint_link.sh  ffi_audit.py  ffi_lint.py  gen_synthetic_data.py  hardening.sh  hardening_tiers_report.sh  hardening_validate.sh  install_adr030_pg17_pg_test.sh  install_hardening_tools.sh  install_pg_comparator_exts.sh  install_pgvector_pg17_scratch.sh  load_multi_am.sh  load_pg_comparators.sh  load_real_corpus.py  load_real_corpus_scratch.sh  merge_coverage_summaries.py  pg17_scratch_psql.sh  prepare_real_corpus_scratch.sh  qdrant_dbpedia_to_tsv.py  refresh_adr030_scratch_debug_helpers.sh  resolve_scratch_socket_dir.sh  restart_adr030_scratch.sh  run_benchmark_profile.sh  (+25 more)
spec/: spec.md  tests.md
sql/: bootstrap.sql
src/: fault.rs  lib.rs  pg18_pgstat_shim.rs  standalone_pg_backend_stubs.rs
supply-chain/: audits.toml  config.toml
tests/: kani_item_pointer.rs  on_disk_fixtures.rs  proptest_page.rs  proptest_quant.rs  recall_integration.rs  simd_diff.rs  size_of_assertions.rs  upgrade_matrix.rs  wal_policy.rs
(+8625 files in other folders)
