[package]
name = "ecaz-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[features]
pg_test = []

[dependencies]
libfuzzer-sys = "0.4"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"

[[bin]]
name = "fuzz_parse_text"
path = "fuzz_targets/parse_text.rs"
doc = false

[[bin]]
name = "fuzz_unpack_mse"
path = "fuzz_targets/unpack_mse.rs"
doc = false

[[bin]]
name = "fuzz_element_tuple_decode"
path = "fuzz_targets/element_tuple_decode.rs"
doc = false

[[bin]]
name = "fuzz_neighbor_tuple_decode"
path = "fuzz_targets/neighbor_tuple_decode.rs"
doc = false

[[bin]]
name = "fuzz_diskann_metadata_decode"
path = "fuzz_targets/diskann_metadata_decode.rs"
doc = false

[[bin]]
name = "fuzz_item_pointer_decode"
path = "fuzz_targets/item_pointer_decode.rs"
doc = false

[[bin]]
name = "fuzz_vector_normalize"
path = "fuzz_targets/vector_normalize.rs"
doc = false
