[package]
name = "ecaz-cloud"
version = "0.1.0"
edition = "2021"
description = "Cloud benchmark orchestration for ecaz: provision, install, load corpus, bench, teardown."
rust-version = "1.78"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "time"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
